ListView   - 사용할 한칸 xml을 작성완료

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
 
 //    Lottie
     implementation 'com.airbnb.android:lottie:5.0.3'
+
+//    SimpleRatingBar
+    implementation 'com.github.ome450901:SimpleRatingBar:1.5.1'
 }
